# wardnmesh

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  agent-guard-rules.example.json  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.codex/agents/: debugger.toml  dependency-manager.toml  documentation-engineer.toml  frontend-developer.toml  mcp-developer.toml  penetration-tester.toml  reviewer.toml  rust-engineer.toml  security-auditor.toml  security-engineer.toml  tooling-engineer.toml  typescript-pro.toml
.github/workflows/: ci.yml  cli-release.yml  desktop-ci.yml  desktop-release.yml  playwright.yml  security-scan.yml  web-deploy.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/icons/: generate-icons.sh  icon.icns
apps/desktop/src-tauri/src/: commands.rs  confirmation.rs  database.rs  ipc_server.rs  lib.rs  main.rs  types.rs
data/: default-threat-rules.json
docs/: API.md  ARCHITECTURE.md  CICD_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  START_HERE.md  UPDATING.md  index.html
scripts/: audit_i18n.ts
src/: active-defense.ts  agent-guard.ts  cli.ts  errors.ts  index.ts
src/autofix/: executor.ts  service.ts  strategy.ts
src/commands/: audit-cmd.ts  decisions.ts  doctor.ts  rules-cmd.ts  run.ts  status-cmd.ts
src/config/: defaults.ts  (+1 more)
tests/: custom-matchers.d.ts  setup.ts  test-utils.ts  types.d.ts
(+163 files in other folders)
