[package]
name = "wardnmesh-desktop"
version = "0.1.0"
description = "WardnMesh Desktop - AI Agent Security Monitor"
authors = ["KT"]
edition = "2021"

[lib]
name = "wardnmesh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tauri-plugin-notification = "2"
